# xphere

./: #00 - Integrantes do grupo.docx  #3 - Lista de Atividades.doc  CMakeLists.txt  README.md  index.html
Graficos de Gantt e Redes/: Gantt.mpp
Site/: error.html  index.html
Site/css/: error.css  main.css
Site/js/: app.js
docs/: dhcp_link_tutorial.txt
ducumentação/: #1 - Termo de Abertura.docx  #2 - Declaração de escopo.docx  #3 - Documento de requisitos.docx  #4 - Lista de Atividades.docx  #5-Plano de gerenciamento dos requisitos.docx
ducumentação/gráficos/: redes.mpp
exercicios/exercicio1/: aritmetica.c  aritmetica.h  main.c
sistema/: CMakeLists.txt
sistema/src/: CMakeLists.txt  main.c
sistema/src/banco/: CMakeLists.txt  banco.c  banco.h
sistema/src/includes/: CMakeLists.txt  rotas.c  rotas.h
sistema/web/: index.html  params.json
sistema/web/nbproject/: project.properties
sistema/webserver/: CMakeLists.txt  resources.pl  webserver.c  webserver.h
src/: main.c
xeon/js/: app.js
xeon/nbproject/: project.xml
